ingressnginx/manifests/deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  # annotations:
  #   These NGINX annotations are automatically translated by Traefik
spec:
  ingressClassName: nginx # ← Traefik will watch this class
  tls:
    - hosts:
        - domain.com
      secretName: tls-secret
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          args:
            - "--verbose"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
