ingressnginx/manifests/tls_repro_2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: argocd-server
spec:
  ingressClassName: nginx
  rules:
    - host: "argocd.localhost"
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "argocd.localhost"
      secretName: not-valid-tls
