ingressnginx/manifests/wrr_traefik.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-name
  namespace: apps

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`example.com`) && PathPrefix(`/foo`)
      kind: Rule
      services:
        # Set a WRR TraefikService
        - name: wrr1
          namespace: apps
          kind: TraefikService
  tls:
    # Add a TLS certificate from a Kubernetes Secret
    secretName: supersecret
